<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookTicket">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title01"
        android:textSize="25sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/tvFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tên Phim :"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvSoGhe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Số Ghế :"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edtSoghe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/soghe"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
    android:id="@+id/tvPrice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Giá Vé :"
    android:textSize="20sp"
    android:padding="10dp"
    android:layout_marginTop="10dp"/>

    <Button
    android:id="@+id/btnThanhToan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/thanhtoan"
    android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="10dp"/>


</LinearLayout>