<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User">

    <TextView
        android:id="@+id/qltk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Quản Lý Tài Khoản"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Xin chào!"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txttenuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="Tên Người Dùng"
        android:text=""
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnEditprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Chỉnh Sửa Thông Tin"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnDoimk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Đổi Mật Khẩu"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDangxuat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Đăng Xuất"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/navigationLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="270dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/homeTitle"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnBooking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bookingTitle"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accountTitle"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>